<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nanodegree.izhang.bakingit.StepFragment">

    <ImageView
        android:id="@+id/thumbnail_view"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:visibility="gone" />

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/exoplayer_video"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@id/thumbnail_view"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/exoplayer_video"
        android:layout_margin="8dp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_nextstep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/tv_description"
        android:layout_alignParentBottom="true"
        android:layout_margin="4dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_nextstep_label"
        android:textColor="@android:color/white"
        android:visibility="invisible" />

</RelativeLayout>
