<resources>
    <string name="app_name">BakingIt</string>

    <string name="recipe_fragment_label">"Recipe: "</string>
    <string name="recipe_fragment_servings">" Servings"</string>

    <!-- Identifiers for intents -->
    <string name="passed_recipe_id">id</string>
    <string name="param_recipe_id">RecipeId</string>
    <string name="param_step_id">StepId</string>

    <!-- Identifier for Realm Query -->
    <string name="id">id</string>

    <!-- App Widget -->
    <string name="widget_pref_key">nanodegree.izhang.bakingit.prefkey</string>
    <string name="widget_recipe_id">WIDGET_RECIPE_ID</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <!-- UI View Text -->
    <string name="btn_nextstep_label">Next Step</string>
    <string name="tv_recipe_label">Recipe:</string>
    <string name="tv_ingred_label">Ingredients</string>
    <string name="tv_steps_label">Steps</string>

    <!-- Identifier for savedInstanceStates -->
    <string name="param_video_state">savedvideostate</string>


</resources>
