...
                    android:layout_marginTop="32dp"
                    android:text="@string/tv_steps_label"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_step_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/tv_step_label"
                    android:layout_marginTop="4dp" />

            </RelativeLayout>
...
